<resources>
    <string name="app_name">Zono Widgets</string>
    <string name="clock_settings">Clock settings</string>
    <string name="first_city">First city</string>
    <string name="second_city">Second city</string>
    <string name="additional_configuration">Additional Configuration</string>
    <string name="format_24_hour_switch_title">Use 24-hour format</string>
    <string name="day_night_switch_title">Day and night colors</string>
    <string name="day_night_switch_description">Background color will change depending on the time of the day.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="unable_to_open_settings">Unable to open settings</string>
    <string name="select_your_city">Select your city</string>
    <string name="navigate_up">Navigate up</string>
    <string name="background_opacity_title">Background opacity</string>
    <string name="search_cities">City/country/region</string>
    <string name="widget_date_format">EEE, dd MMM</string>
    <string name="widget_format_time_12">hh:mm</string>
    <string name="widget_format_time_24">HH:mm</string>
    <string name="utc">UTC (Coordinated Universal Time)</string>
    <string name="city_afghanistan__kabul">Kabul / Afghanistan</string>
    <string name="city_algeria__algiers">Algiers / Algeria</string>
    <string name="city_american_samoa__pago_pago">Pago Pago / American Samoa</string>
    <string name="city_angola__luanda">Luanda / Angola</string>
    <string name="city_anguilla__the_valley">The Valley / Anguilla</string>
    <string name="city_argentina__buenos_aires">Buenos Aires / Argentina</string>
    <string name="city_argentina__cordoba">Cordoba / Argentina</string>
    <string name="city_argentina__rosario">Rosario / Argentina</string>
    <string name="city_armenia__yerevan">Yerevan / Armenia</string>
    <string name="city_australia__adelaide">Adelaide / Australia</string>
    <string name="city_australia__brisbane">Brisbane / Australia</string>
    <string name="city_australia__canberra">Canberra / Australia</string>
    <string name="city_australia__gold_coast">Gold Coast / Australia</string>
    <string name="city_australia__melbourne">Melbourne / Australia</string>
    <string name="city_australia__perth">Perth / Australia</string>
    <string name="city_australia__sydney">Sydney / Australia</string>
    <string name="city_austria__vienna">Vienna / Austria</string>
    <string name="city_azerbaijan__baku">Baku / Azerbaijan</string>
    <string name="city_bahamas__nassau">Nassau / Bahamas</string>
    <string name="city_bahrain__manama">Manama / Bahrain</string>
    <string name="city_bangladesh__chittagong">Chittagong / Bangladesh</string>
    <string name="city_bangladesh__dhaka">Dhaka / Bangladesh</string>
    <string name="city_belarus__minsk">Minsk / Belarus</string>
    <string name="city_belgium__antwerp">Antwerp / Belgium</string>
    <string name="city_belgium__brussels">Brussels / Belgium</string>
    <string name="city_bhutan__thimphu">Thimphu / Bhutan</string>
    <string name="city_bolivia__la_paz">La Paz / Bolivia</string>
    <string name="city_bolivia__santa_cruz">Santa Cruz / Bolivia</string>
    <string name="city_botswana__gaborone">Gaborone / Botswana</string>
    <string name="city_brazil__belo_horizonte">Belo Horizonte / Brazil</string>
    <string name="city_brazil__brasilia">Brasilia / Brazil</string>
    <string name="city_brazil__fortaleza">Fortaleza / Brazil</string>
    <string name="city_brazil__recife">Recife / Brazil</string>
    <string name="city_brazil__rio_de_janeiro">Rio de Janeiro / Brazil</string>
    <string name="city_brazil__salvador">Salvador / Brazil</string>
    <string name="city_brazil__sao_paulo">Sao Paulo / Brazil</string>
    <string name="city_brunei__bandar_seri_begawan">Bandar Seri Begawan / Brunei</string>
    <string name="city_bulgaria__sofia">Sofia / Bulgaria</string>
    <string name="city_burkina_faso__ouagadougou">Ouagadougou / Burkina Faso</string>
    <string name="city_burundi__bujumbura">Bujumbura / Burundi</string>
    <string name="city_cambodia__phnom_penh">Phnom Penh / Cambodia</string>
    <string name="city_cameroon__douala">Douala / Cameroon</string>
    <string name="city_cameroon__yaounde">Yaounde / Cameroon</string>
    <string name="city_canada__calgary">Calgary / Canada</string>
    <string name="city_canada__edmonton">Edmonton / Canada</string>
    <string name="city_canada__halifax">Halifax / Canada</string>
    <string name="city_canada__hamilton">Hamilton / Canada</string>
    <string name="city_canada__montreal">Montreal / Canada</string>
    <string name="city_canada__newfoundland">Newfoundland / Canada</string>
    <string name="city_canada__ottawa">Ottawa / Canada</string>
    <string name="city_canada__quebec_city">Quebec City / Canada</string>
    <string name="city_canada__regina">Regina / Canada</string>
    <string name="city_canada__st_johns">St. John\'s / Canada</string>
    <string name="city_canada__toronto">Toronto / Canada</string>
    <string name="city_canada__vancouver">Vancouver / Canada</string>
    <string name="city_canada__victoria">Victoria / Canada</string>
    <string name="city_canada__winnipeg">Winnipeg / Canada</string>
    <string name="city_central_african_republic__bangui">Bangui / Central African Republic</string>
    <string name="city_chad__n_djamena">N\'Djamena / Chad</string>
    <string name="city_chile__concepcion">Concepcion / Chile</string>
    <string name="city_chile__santiago">Santiago / Chile</string>
    <string name="city_chile__valparaiso">Valparaiso / Chile</string>
    <string name="city_china__beijing">Beijing / China</string>
    <string name="city_china__changchun">Changchun / China</string>
    <string name="city_china__chengdu">Chengdu / China</string>
    <string name="city_china__chongqing">Chongqing / China</string>
    <string name="city_china__fuzhou">Fuzhou / China</string>
    <string name="city_china__guangzhou">Guangzhou / China</string>
    <string name="city_china__haikou">Haikou / China</string>
    <string name="city_china__hangzhou">Hangzhou / China</string>
    <string name="city_china__harbin">Harbin / China</string>
    <string name="city_china__jinan">Jinan / China</string>
    <string name="city_china__kunming">Kunming / China</string>
    <string name="city_china__macau">Macau / China</string>
    <string name="city_china__nanjing">Nanjing / China</string>
    <string name="city_china__nanning">Nanning / China</string>
    <string name="city_china__qingdao">Qingdao / China</string>
    <string name="city_china__shanghai">Shanghai / China</string>
    <string name="city_china__shenyang">Shenyang / China</string>
    <string name="city_china__shenzhen">Shenzhen / China</string>
    <string name="city_china__tianjin">Tianjin / China</string>
    <string name="city_china__urumqi">Urumqi / China</string>
    <string name="city_china__wuhan">Wuhan / China</string>
    <string name="city_china__xi_an">Xi\'an / China</string>
    <string name="city_china__zhengzhou">Zhengzhou / China</string>
    <string name="city_colombia__bogota">Bogota / Colombia</string>
    <string name="city_colombia__cali">Cali / Colombia</string>
    <string name="city_colombia__medellin">Medellin / Colombia</string>
    <string name="city_costa_rica__san_jose">San Jose / Costa Rica</string>
    <string name="city_croatia__zagreb">Zagreb / Croatia</string>
    <string name="city_cuba__havana">Havana / Cuba</string>
    <string name="city_czech_republic__prague">Prague / Czech Republic</string>
    <string name="city_cote_d_ivoire__abidjan">Abidjan / Cote d\'Ivoire</string>
    <string name="city_cote_d_ivoire__yamoussoukro">Yamoussoukro / Cote d\'Ivoire</string>
    <string name="city_dr_congo__kinshasa">Kinshasa / DR Congo</string>
    <string name="city_dr_congo__lubumbashi">Lubumbashi / DR Congo</string>
    <string name="city_denmark__copenhagen">Copenhagen / Denmark</string>
    <string name="city_djibouti__djibouti">Djibouti / Djibouti</string>
    <string name="city_dominica__roseau">Roseau / Dominica</string>
    <string name="city_dominican_republic__santo_domingo">Santo Domingo / Dominican Republic</string>
    <string name="city_ecuador__guayaquil">Guayaquil / Ecuador</string>
    <string name="city_ecuador__quito">Quito / Ecuador</string>
    <string name="city_egypt__alexandria">Alexandria / Egypt</string>
    <string name="city_egypt__cairo">Cairo / Egypt</string>
    <string name="city_el_salvador__san_salvador">San Salvador / El Salvador</string>
    <string name="city_eritrea__asmara">Asmara / Eritrea</string>
    <string name="city_estonia__tallinn">Tallinn / Estonia</string>
    <string name="city_eswatini__mbabane">Mbabane / Eswatini</string>
    <string name="city_ethiopia__addis_ababa">Addis Ababa / Ethiopia</string>
    <string name="city_fiji__suva">Suva / Fiji</string>
    <string name="city_finland__helsinki">Helsinki / Finland</string>
    <string name="city_france__lyon">Lyon / France</string>
    <string name="city_france__marseille">Marseille / France</string>
    <string name="city_france__paris">Paris / France</string>
    <string name="city_french_polynesia__papeete">Papeete / French Polynesia</string>
    <string name="city_gb_virgin_islands__road_town">Road Town / GB Virgin Islands</string>
    <string name="city_gb_virgin_islands__the_settlement">The Settlement / GB Virgin Islands</string>
    <string name="city_gabon__libreville">Libreville / Gabon</string>
    <string name="city_gambia__banjul">Banjul / Gambia</string>
    <string name="city_georgia__tbilisi">Tbilisi / Georgia</string>
    <string name="city_germany__berlin">Berlin / Germany</string>
    <string name="city_germany__frankfurt">Frankfurt / Germany</string>
    <string name="city_germany__hamburg">Hamburg / Germany</string>
    <string name="city_germany__munich">Munich / Germany</string>
    <string name="city_ghana__accra">Accra / Ghana</string>
    <string name="city_greece__athens">Athens / Greece</string>
    <string name="city_greece__thessaloniki">Thessaloniki / Greece</string>
    <string name="city_guatemala__guatemala_city">Guatemala City / Guatemala</string>
    <string name="city_guinea_bissau__bissau">Bissau / Guinea-Bissau</string>
    <string name="city_guyana__georgetown">Georgetown / Guyana</string>
    <string name="city_haiti__port_au_prince">Port-au-Prince / Haiti</string>
    <string name="city_honduras__tegucigalpa">Tegucigalpa / Honduras</string>
    <string name="city_hong_kong__hong_kong">Hong Kong / Hong Kong</string>
    <string name="city_hungary__budapest">Budapest / Hungary</string>
    <string name="city_iceland__reykjavik">Reykjavik / Iceland</string>
    <string name="city_india__bangalore">Bangalore / India</string>
    <string name="city_india__chennai">Chennai / India</string>
    <string name="city_india__hyderabad">Hyderabad / India</string>
    <string name="city_india__kolkata">Kolkata / India</string>
    <string name="city_india__mumbai">Mumbai / India</string>
    <string name="city_india__new_delhi">New Delhi / India</string>
    <string name="city_indonesia__ambon">Ambon / Indonesia</string>
    <string name="city_indonesia__bandung">Bandung / Indonesia</string>
    <string name="city_indonesia__denpasar">Denpasar / Indonesia</string>
    <string name="city_indonesia__jakarta">Jakarta / Indonesia</string>
    <string name="city_indonesia__makassar">Makassar / Indonesia</string>
    <string name="city_indonesia__surabaya">Surabaya / Indonesia</string>
    <string name="city_iran__tehran">Tehran / Iran</string>
    <string name="city_iraq__baghdad">Baghdad / Iraq</string>
    <string name="city_ireland__dublin">Dublin / Ireland</string>
    <string name="city_israel__jerusalem">Jerusalem / Israel</string>
    <string name="city_israel__tel_aviv">Tel Aviv / Israel</string>
    <string name="city_italy__genoa">Genoa / Italy</string>
</resources>