<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:keyboardNavigationCluster="false"
        app:title="@string/clock_settings"
        app:titleTextColor="?colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="16dp">

        <com.jw.zonowidgets.ui.views.ClockSettingItemView
            android:id="@+id/timezone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:text="@string/first_city" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="?colorOutlineVariant" />

        <com.jw.zonowidgets.ui.views.ClockSettingItemView
            android:id="@+id/timezone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:text="@string/second_city" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:paddingVertical="15dp"
            android:text="@string/done" />
    </LinearLayout>
</LinearLayout>