<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="0dp"
    android:layout_height="90dp"
    android:layout_marginHorizontal=".5dp"
    android:layout_weight="1"
    tools:layout_width="180dp">

    <FrameLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_widget_clock_left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@null"
            tools:src="@drawable/ic_moon_24dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textDirection="locale"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Tokyo" />

            <LinearLayout
                android:id="@+id/time_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center"
                android:orientation="horizontal">

                <TextClock
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format12Hour="@string/widget_format_time_12"
                    android:format24Hour="@string/widget_format_time_24"
                    android:textColor="@android:color/white"
                    android:textSize="26sp" />

                <TextClock
                    android:id="@+id/amPmText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format12Hour="a"
                    android:format24Hour=""
                    android:maxLines="1"
                    android:paddingStart="4dp"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <TextClock
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:format12Hour="@string/widget_date_format"
                android:format24Hour="@string/widget_date_format"
                android:textSize="13sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                tools:text="Yesterday, +5:30" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
