<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="3dp"
    android:layout_weight="1"
    android:maxHeight="65dp"
    tools:layout_height="65dp"
    tools:layout_width="200dp">

    <FrameLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_widget_clock" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:id="@+id/time_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextClock
                android:id="@+id/amPmText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:format12Hour="a"
                android:format24Hour=""
                android:maxLines="1"
                android:textColor="@color/widget_text_color"
                android:textSize="@dimen/widget_ampm_font_size_compact"
                android:visibility="gone"
                tools:textColor="@color/widget_text_color_night" />

            <TextClock
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:format12Hour="@string/widget_format_time_12"
                android:format24Hour="@string/widget_format_time_24"
                android:maxLines="1"
                android:textColor="@color/widget_text_color"
                android:textSize="@dimen/widget_time_font_size_compact"
                tools:textColor="@color/widget_text_color_night" />

            <TextClock
                android:id="@+id/amPmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:format12Hour="a"
                android:format24Hour=""
                android:maxLines="1"
                android:textColor="@color/widget_text_color"
                android:textSize="@dimen/widget_ampm_font_size_compact"
                tools:textColor="@color/widget_text_color_night" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/widget_text_color"
                android:textSize="@dimen/widget_place_font_size_compact"
                android:textStyle="bold"
                tools:text="Seoul"
                tools:textColor="@color/widget_text_color_night" />

            <TextClock
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:format12Hour="@string/widget_date_format"
                android:format24Hour="@string/widget_date_format"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/widget_text_color"
                android:textSize="@dimen/widget_date_font_size_compact"
                tools:textColor="@color/widget_text_color_night" />
        </LinearLayout>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/day_night_icon_size_compact"
            android:layout_height="@dimen/day_night_icon_size_compact"
            android:layout_marginStart="2dp"
            android:contentDescription="@null"
            tools:src="@drawable/ic_moon_24dp" />
    </LinearLayout>
</FrameLayout>
