<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:layout_weight="1"
    tools:layout_height="120dp"
    tools:layout_width="180dp">

    <FrameLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_widget_clock" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/widget_text_color"
                android:textDirection="locale"
                android:textSize="@dimen/widget_place_font_size"
                android:textStyle="bold"
                tools:text="Tokyo"
                tools:textColor="@color/widget_text_color_night" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/day_night_icon_size"
                android:layout_height="@dimen/day_night_icon_size"
                android:layout_marginStart="4dp"
                android:contentDescription="@null"
                android:gravity="bottom"
                tools:src="@drawable/ic_moon_24dp" />
        </LinearLayout>

        <TextClock
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format12Hour="@string/widget_date_format"
            android:format24Hour="@string/widget_date_format"
            android:gravity="center"
            android:textColor="@color/widget_text_color"
            android:textSize="@dimen/widget_date_font_size"
            tools:textColor="@color/widget_text_color_night" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/time_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextClock
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format12Hour="@string/widget_format_time_12"
                    android:format24Hour="@string/widget_format_time_24"
                    android:textColor="@color/widget_text_color"
                    android:textSize="@dimen/widget_time_font_size"
                    tools:textColor="@color/widget_text_color_night" />

                <TextClock
                    android:id="@+id/amPmText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:format12Hour="a"
                    android:format24Hour=""
                    android:textColor="@color/widget_text_color"
                    android:textSize="@dimen/widget_ampm_font_size"
                    tools:textColor="@color/widget_text_color_night" />
            </LinearLayout>

            <TextView
                android:id="@+id/flag_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="@dimen/widget_flag_font_size"
                tools:text="🇯🇵" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
